Sezaam. Working, but flag is available under LVL1.
But it can be a feature, because, you don't have a clue of how to enter the flag directory, you need to search it manually.

--- a/Tasks/hard/sezaaaam/sezaam.conf
+++ b/Tasks/hard/sezaaaam/sezaam.conf
@@ -2,24 +2,59 @@ server {
     listen 80;
     root /var/www/html;
 
-
-    location ~ ^/.*/.*/$ {
+    location ~ ^\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/$ {
         autoindex on;
-        auth_basic           “LVL3”;
+        auth_basic           'LVL10';
+        auth_basic_user_file /var/www/levels/level10;
+    }
+location ~ ^\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/$ {
+        autoindex on;
+        auth_basic           'LVL9';
+        auth_basic_user_file /var/www/levels/level9;
+    }
+location ~ ^\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/$ {
+        autoindex on;
+        auth_basic           'LVL8';
+        auth_basic_user_file /var/www/levels/level8;
+    }
+location ~ ^\/\w*\/\w*\/\w*\/\w*\/\w*\/\w*\/$ {
+        autoindex on;
+        auth_basic           'LVL7';
+        auth_basic_user_file /var/www/levels/level7;
+    }
+location ~ ^\/\w*\/\w*\/\w*\/\w*\/\w*\/$ {
+        autoindex on;
+        auth_basic           'LVL6';
+        auth_basic_user_file /var/www/levels/level6;
+    }
+location ~ ^\/\w*\/\w*\/\w*\/\w*\/$ {
+        autoindex on;
+        auth_basic           'LVL5';
+        auth_basic_user_file /var/www/levels/level5;
+    }
+location ~ ^\/\w*\/\w*\/\w*\/$ {
+        autoindex on;
+        auth_basic           'LVL4';
+        auth_basic_user_file /var/www/levels/level4;
+    }
+location ~ ^\/\w*\/\w*\/$ {
+        autoindex on;
+        auth_basic           'LVL3';
         auth_basic_user_file /var/www/levels/level3;
     }
-
-
-    location ~ ^/.*/$ {
+location ~ ^\/\w*\/$ {
         autoindex on;
-        auth_basic           “LVL2”;
+        auth_basic           'LVL2';
         auth_basic_user_file /var/www/levels/level2;
     }
 
-    location / {
-    autoindex on;
+
+
+    location ~ ^\/\w*$ {
+        autoindex on;
         auth_basic           “LVL1”;
         auth_basic_user_file /var/www/levels/level1;
     }
 
 }
+
