--- a/Tasks/hard/sezaaaam/docker-compose.yaml
+++ b/Tasks/hard/sezaaaam/docker-compose.yaml
@@ -1,9 +1,11 @@
-web:
-  image: nginx
-  volumes:
-    - ./sezaam.conf:/etc/nginx/conf.d/default.conf:ro
-    - ./levels:/var/www/levels:ro
-    - ./nginx-dirs:/var/www/html:ro
-  command: [nginx-debug, '-g', 'daemon off;']
-  ports:
-  - 10030:80
+version: "2"
+services:
+  web:
+    image: nginx
+    volumes:
+      - ./sezaam.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./levels:/var/www/levels:ro
+      - ./nginx-dirs:/var/www/html:ro
+    command: [nginx-debug, '-g', 'daemon off;']
+    ports:
+    - 10030:80
